tests/contract_testcases/substrate/modifier/function_modifier_01.sol

        contract c {
            modifier foo() { _; }

            function bar() foo(1) public {}
        }
// ---- Expect: diagnostics ----
// error: 5:28-34: modifier expects 0 arguments, 1 provided
